# terminal-notepad-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
note/: Cargo.toml
note/src/: buffer.rs  console.rs  cursor.rs  editor.rs  error.rs  history.rs  key_event.rs  lib.rs  main.rs  prompt.rs  screen.rs  terminal.rs  windows.rs
