[package]
name = "note"
# https://crates.io/category_slugs
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
unicode-width = "0.1.11"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
]
