[package]
name = "note"
# https://crates.io/category_slugs
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.winres]
FileDescription = "Terminal Notepad for Windows"
LegalCopyright = "Copyright (c) 2024 9506hqwy"
OriginalFilename = "note.exe"
ProductName = "terminal-notepad-rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
unicode-width = "0.1.13"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
]
